<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_outer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_outer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RelativeLayout
            android:id="@+id/rl_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_nik"
                android:layout_width="@dimen/fixture_width"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_nik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="8"
                    android:singleLine="true"
                    android:hint="@string/hint_nik" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_fixture"
                android:layout_width="@dimen/fixture_width"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/input_layout_nik"
                android:layout_marginLeft="15dp">

                <EditText
                    android:id="@+id/input_fixture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:maxLength="9"
                    android:singleLine="true"
                    android:hint="@string/hint_fixture" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_new_fixture"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/input_layout_fixture"
                android:layout_marginLeft="15dp"
                android:text="@string/btn_new_fixture"
                android:textSize="@dimen/small"
                android:background="@color/colorPrimary"
                android:foreground="@drawable/ripple"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_bc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_bc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="13"
                android:singleLine="true"
                android:hint="@string/hint_bc1" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_bc2"
                android:layout_width="250dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_bc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="13"
                    android:singleLine="true"
                    android:hint="@string/hint_bc2" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_qty"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/input_layout_bc2"
                android:layout_marginLeft="15dp">

                <EditText
                    android:id="@+id/input_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:hint="@string/hint_qty" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/padd_10">

                    <TextView
                        android:id="@+id/tv_qty"
                        android:text="@string/qty"
                        android:layout_width="@dimen/table_header"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_padding_horizontal"
                        android:textColor="@android:color/white"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_barcode"
                        android:text="@string/barcode"
                        android:layout_width="@dimen/barcode"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_toRightOf="@id/tv_qty"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_fixture"
                        android:text="@string/fixture"
                        android:layout_width="@dimen/barcode"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_padding_horizontal"
                        android:textColor="@android:color/white"
                        android:layout_toRightOf="@id/tv_barcode"
                        android:gravity="center"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_header"
                android:layout_above="@+id/cv_footer"
                android:scrollbars="vertical" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="@dimen/bottom_navigation_margin"
                    android:padding="@dimen/padd_10">

                    <TextView
                        android:id="@+id/tv_qty_footer"
                        android:text="@string/qty"
                        android:layout_width="@dimen/table_header"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_padding_horizontal"
                        android:textColor="@android:color/white"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_barcode_footer"
                        android:text="@string/barcode"
                        android:layout_width="@dimen/barcode"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:layout_toRightOf="@id/tv_qty_footer"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/tv_fixture_footer"
                        android:text="@string/fixture"
                        android:layout_width="@dimen/barcode"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_padding_horizontal"
                        android:textColor="@android:color/white"
                        android:layout_toRightOf="@id/tv_barcode_footer"
                        android:gravity="center"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
